--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,10 @@
 <!doctype html>
 <html>
 
-<head>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/speech-commands"></script>
-</head>
+<head></head>
 
 <body>
-  <button id="left" onmousedown="collect(0)" onmouseup="collect(null)">Left</button>
-  <button id="right" onmousedown="collect(1)" onmouseup="collect(null)">Right</button>
-  <button id="noise" onmousedown="collect(2)" onmouseup="collect(null)">Noise</button>
-  <div id="console"></div>
+  <app-component></app-component>
   <script src="index.js"></script>
   <app-root></app-root>
 </body>
