--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 
-<head></head>
+<head>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/speech-commands"></script> -->
+</head>
 
 <body>
   <app-component></app-component>
-  <script src="index.js"></script>
   <app-root></app-root>
 </body>
 
